--- a/src/server_employer/Source/views/partials/header_employer_not_login.hbs
+++ b/src/server_employer/Source/views/partials/header_employer_not_login.hbs
@@ -3,6 +3,6 @@
     <a href="#" id="find_job">Tìm việc làm</a>
     <a href="#" id="list_company">Danh sách công ty</a>
     <a href="#" id="blog">Blog</a>
-    <button id="btn_login"><a id="btn_login_recruit" href="/employer/sign_in">Đăng nhập</a></button>
-    <button id="btn_signin"><a id="btn_signin_recruit" href="/employer/sign_up">Đăng ký</a></button>
+    <button id="btn_login"><a id="btn_login_recruit" href="/auth/sign_in">Đăng nhập</a></button>
+    <button id="btn_signin"><a id="btn_signin_recruit" href="/auth/sign_up">Đăng ký</a></button>
 </nav>
