--- a/src/server_employer/Source/views/signin_recruit.html
+++ b/src/server_employer/Source/views/signin_recruit.html
@@ -26,26 +26,35 @@
 
         <div id="rectangle_mid_signin_recruit">
             <div id="rectangle_form_signin_recruit">
-                <img src="./style/image/welcome_signin_recruit.svg" id="text_welcome_signin_recruit" alt="text_welcome_signin_recruit">
-                <img src="./style/image/text_introduct_signin_recruit.svg" id="text_introduce_signin_recruit" alt="text_introduce_signin_recruit">
+                <img src="./style/image/welcome_signin_recruit.svg" id="text_welcome_signin_recruit"
+                    alt="text_welcome_signin_recruit">
+                <img src="./style/image/text_introduct_signin_recruit.svg" id="text_introduce_signin_recruit"
+                    alt="text_introduce_signin_recruit">
 
                 <form action="">
                     <div id="text_account_login">Tài khoản đăng nhập</div>
                     <div id="label_email_signin_recruit">Email</div>
-                    <input type="email" name="email_signin_recuit" id="email_signin_recuit"  required placeholder="Nhập email của bạn">
-                    <input type="password" name="password_signin_recruit" id="password_signin_recuit"  required placeholder="Nhập mật khẩu">
+                    <input type="email" name="email_signin_recuit" id="email_signin_recuit" required
+                        placeholder="Nhập email của bạn">
+                    <input type="password" name="password_signin_recruit" id="password_signin_recuit" required
+                        placeholder="Nhập mật khẩu">
                     <div id="label_password_signin_recruit">Mật khẩu</div>
                     <img src="./style/image/eye-slash.svg" id="logo_password_signin_recruit" alt="logo_password">
-                    <input type="password" name="confirm_password_signin_recruit" id="confirm_password_signin_recuit"  required placeholder="Nhập lại mật khẩu">
+                    <input type="password" name="confirm_password_signin_recruit" id="confirm_password_signin_recuit"
+                        required placeholder="Nhập lại mật khẩu">
                     <div id="label_confirm_password_signin_recruit">Xác nhận mật khẩu</div>
-                    <img src="./style/image/eye-slash.svg" id="logo_confirm_password_signin_recruit" alt="logo_password">
+                    <img src="./style/image/eye-slash.svg" id="logo_confirm_password_signin_recruit"
+                        alt="logo_password">
                     <div id="text_info_recruit">Thông tin nhà tuyển dụng</div>
                     <div id="label_fullname_signin_recruit">Họ và tên</div>
-                    <input type="text" name="fullname_signin_recuit" id="fullname_signin_recuit"  required placeholder="Nhập họ tên của bạn">
+                    <input type="text" name="fullname_signin_recuit" id="fullname_signin_recuit" required
+                        placeholder="Nhập họ tên của bạn">
                     <div id="label_phone_signin_recruit">Số điện thoại</div>
-                    <input type="text" name="phone_signin_recuit" id="phone_signin_recuit"  required placeholder="Nhập số điện thoại">
+                    <input type="text" name="phone_signin_recuit" id="phone_signin_recuit" required
+                        placeholder="Nhập số điện thoại">
                     <div id="label_name_company_signin_recruit">Tên công ty</div>
-                    <input type="text" name="name_company_signin_recuit" id="name_company_signin_recuit"  required placeholder="Tên công ty">
+                    <input type="text" name="name_company_signin_recuit" id="name_company_signin_recuit" required
+                        placeholder="Tên công ty">
                     <div id="label_address_company_signin_recruit">Địa điểm làm việc</div>
                     <select name="select_province_signin_recruit" id="select_province_signin_recruit" required="">
                         <option disabled selected value>Tỉnh/Thành phố</option>
@@ -68,17 +77,18 @@
                     <button type="submit" id="submit_signin_recruit">Đăng ký</button>
 
                 </form>
-         
+
             </div>
-        
+
         </div>
         <div class="footer">
             <img id="logo_web_footer" src="./style/image/logo_web.svg" alt="logoweb">
             <p id="text_info_footer">Chúng tôi là JORE hệ thống tìm kiếm việc làm uy tính tại Việt Nam</p>
         </div>
     </div>
-   
 
 </body>
+
+
 
 </html>
