--- a/src/server_admin/Source/views/admin_detail_news_recruit.html
+++ b/src/server_admin/Source/views/admin_detail_news_recruit.html
@@ -28,10 +28,6 @@
     <div class="rectangle_home">
         <nav class="navbar navbar-expand-lg navbar-light header">
             <img id="logo_web_home_recruit" src="./style/image/logo_web.svg" alt="logoweb">
-            <a id="post_news_recruit" href="#">Đăng tin
-                <img src="./style/image/ic_post_news.svg" id="ic_post_news_home_recruit"
-                    alt="ic_post_news_home_recruit">
-            </a>
             <a id="chat_recruit" href="#">Kết nối
                 <img src="./style/image/ic_chat.svg" id="ic_chat_home_recruit" alt="ic_chat_home_recruit">
             </a>
@@ -48,8 +44,8 @@
                         <img src="./style/image/ic_setting_account.svg" id="ic_setting_account_candidate"
                             alt="ic_setting_account_candidate">
                     </a>
-                    <a class="dropdown-item" id="application_management_candidate" href="#">Quản lý hồ sơ ứng tuyển
-                        <img src="./style/image/ic_managed_application.svg" id="ic_application_management_candidate"
+                    <a class="dropdown-item" id="application_management_candidate" href="#">Đổi mật khẩu
+                        <img src="./style/image/logo_password.svg" id="ic_application_management_candidate"
                             alt="ic_application_management_candidate">
                     </a>
                     <a class="dropdown-item" id="logout_candidate" href="#">Đăng xuất
@@ -59,17 +55,17 @@
                 </div>
             </div>
         </nav>
-        <div class="rectangle_mid_detail_news_home_recruit">
-            <div class="side_left_home_recruit">
-                <a id="menu_news_home_recruit" href="#">Bảng tin
-                    <img src="./style/image/ic_news.svg" id="ic_news_home_recruit" alt="ic_news_home_recruit">
+        <div class="rectangle_content_detail_news_admin">
+            <div class="side_left_home_admin">
+                <a id="menu_manage_account_user_admin" href="#">Quản lý tài khoản người dùng
+                    <img src="./style/image/ic_management_record.svg" id="ic_news_home_recruit" alt="ic_news_home_recruit">
                 </a>
-                <a id="menu_manage_recruit_home_recruit" href="#">Quản lý tin tuyển dụng
+                <a id="menu_manage_news_home_admin" href="#">Quản lý tin tuyển dụng
                     <img src="./style/image/ic_management_recruit.svg" id="ic_manage_recruit_home_recruit"
                         alt="ic_manage_recruit_home_recruit">
                 </a>
-                <a id="menu_manage_record_home_recruit" href="#">Quản lý hồ sơ ứng viên
-                    <img src="./style/image/ic_management_record.svg" id="ic_manage_record_home_recruit"
+                <a id="menu_manage_report_home_admin" href="#">Quản lý báo cáo tin tuyển dụng
+                    <img src="./style/image/ic_report.svg" id="ic_manage_record_home_recruit"
                         alt="ic_manage_record_home_recruit">
                 </a>
                 <div id="line"></div>
@@ -86,9 +82,8 @@
                     <img src="./style/image/ic_calendar.svg" alt="ic_calendar" class="ic_calendar_detail_job">
                     <div class="date_post_news_detail_job">Ngày đăng tin: 5-11-2022 </div>
 
-                    <button type="button" class="edit_news_recruit">Chỉnh sửa</button>
-                    <button type="button" class="delete_news_recruit">Xóa</button>
-                    <button type="button" class="list_candidate_submit_recruit">Danh sách ứng viên</button>
+                    <button type="button" class="approve_news_recruit_admin">Duyệt</button>
+                    <button type="button" class="delete_news_recruit_admin">Xóa</button>
 
                 </div>
                 <div id="rectangle_require_recruit">
