update get default avt and login, logout employer

--- a/src/server_candidate/Source/views/candidate/content_signup.hbs
+++ b/src/server_candidate/Source/views/candidate/content_signup.hbs
@@ -5,7 +5,7 @@
 
 
 
-        <form method="post" action="/candidate/signup" class="needs-validation"
+        <form method="post" action="/auth/signup" class="needs-validation"
             oninput='confirm_password_signin.setCustomValidity(confirm_password_signin.value != password_signin.value ? "Mật khẩu nhập lại không đúng !" : "")'>
 
             {{#if message}}
