--- a/src/server_employer/Source/views/partials/header_employer_login.hbs
+++ b/src/server_employer/Source/views/partials/header_employer_login.hbs
@@ -10,9 +10,9 @@
         <img src="/css/style/image/ic_notify_white.svg" id="ic_notify_recruit" alt="ic_notify_candidate">
     </div>
     <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="menu_account_recruit"
-            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dương Minh Hiếu
-            <img src="/css/style/image/avatar_candidate.svg" id="avatar_recruit" alt="avatar_recruit">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="menu_account_recruit" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">{{data.user.name}}
+            <img src="{{data.user.avatar}}" id="avatar_recruit" alt="avatar_recruit">
         </button>
         <div class="dropdown-menu" id="dropdown_menu_recruit" aria-labelledby="menu_account_recruit">
             <a class="dropdown-item" id="setting_account_recruit" href="#">Cài đặt tài khoản
@@ -24,9 +24,11 @@
                 <img src="/css/style/image/ic_managed_application.svg" id="ic_application_management_candidate"
                     alt="ic_application_management_candidate">
             </a>
-               <a class="dropdown-item" id="logout_recruit" href="#">Đăng xuất
-                        <img src="/css/style/image/ic_logout.svg" id="ic_logout_candidate" alt="ic_logout_candidate">
-              </a>
+            <form action="/auth/logout" method="post">
+                <button class="dropdown-item" id="logout_recruit" type="submit">Đăng xuất
+                    <img src="/css/style/image/ic_logout.svg" id="ic_logout_candidate" alt="ic_logout_candidate">
+                </button>
+            </form>
 
         </div>
     </div>
