--- a/src/server_admin/Source/views/content_admin/detail_news.hbs
+++ b/src/server_admin/Source/views/content_admin/detail_news.hbs
@@ -1,17 +1,16 @@
 <div class="rectangle_content_detail_news_home_recruit">
     <div class="header_company_detail_job_recruit">
-        <img src="/css/style/image/logo_company.svg" alt="logo_company_recruit"
-            class="logo_company_detail_job_recruit" />
+        <img src="/css/style/image/logo_company.svg" alt="logo_company_recruit" class="logo_company_detail_job_recruit">
         <div class="name_job_detail_job">Front-End Web Developer</div>
         <div class="name_company_detail_job">VNG Games</div>
-        <img src="/css/style/image/ic_time.svg" alt="ic_time" class="ic_time_detail_job" />
-        <div class="deadline_submit_record_detail_job">Hạn nộp hồ sơ: 12-12-2022</div>
-        <img src="/css/style/image/ic_calendar.svg" alt="ic_calendar" class="ic_calendar_detail_job" />
-        <div class="date_post_news_detail_job">Ngày đăng tin: 5-11-2022</div>
+        <img src="/css/style/image/ic_time.svg" alt="ic_time" class="ic_time_detail_job">
+        <div class="deadline_submit_record_detail_job">Hạn nộp hồ sơ: 12-12-2022 </div>
+        <img src="/css/style/image/ic_calendar.svg" alt="ic_calendar" class="ic_calendar_detail_job">
+        <div class="date_post_news_detail_job">Ngày đăng tin: 5-11-2022 </div>
 
-        <button type="button" class="edit_news_recruit">Chỉnh sửa</button>
-        <button type="button" class="delete_news_recruit">Xóa</button>
-        <button type="button" class="list_candidate_submit_recruit">Danh sách ứng viên</button>
+        <button type="button" class="approve_news_recruit_admin">Duyệt</button>
+        <button type="button" class="delete_news_recruit_admin">Xóa</button>
+
     </div>
     <div id="rectangle_require_recruit">
         <div id="text_detail_recruit_detail_job">Chi tiết tuyển dụng</div>
@@ -20,44 +19,46 @@
             <div class="circle_icon" id="circle_icon_salary_detail_job"></div>
             <div id="text_salary_detail_job">Mức lương</div>
             <div id="value_salary_detail_job">10-12 triệu</div>
-            <img src="/css/style/image/ic_cash.svg" alt="ic_cash" id="ic_salary_detail_job" />
+            <img src="/css/style/image/ic_cash.svg" alt="ic_cash" id="ic_salary_detail_job">
 
             <div class="circle_icon" id="circle_icon_persons_detail_job"></div>
             <div id="text_number_person_detail_job">Số lượng</div>
             <div id="value_number_person_detail_job">10 người</div>
-            <img src="/css/style/image/ic_persons.svg" alt="ic_person" id="ic_persons_detail_job" />
+            <img src="/css/style/image/ic_persons.svg" alt="ic_person" id="ic_persons_detail_job">
 
             <div class="circle_icon" id="circle_icon_method_work_detail_job"></div>
             <div id="text_method_work_detail_job">Hình thức làm việc</div>
             <div id="value_method_work_detail_job">Fulltime</div>
-            <img src="/css/style/image/ic_bag.svg" alt="ic_method_work" id="ic_method_work_detail_job" />
+            <img src="/css/style/image/ic_bag.svg" alt="ic_method_work" id="ic_method_work_detail_job">
             <div class="circle_icon" id="circle_icon_rank_detail_job"></div>
             <div id="text_rank_detail_job">Cấp bậc</div>
             <div id="value_rank_detail_job">Nhân viên</div>
-            <img src="/css/style/image/ic_rank.svg" alt="ic_rank" id="ic_rank_detail_job" />
+            <img src="/css/style/image/ic_rank.svg" alt="ic_rank" id="ic_rank_detail_job">
             <div class="circle_icon" id="circle_icon_gender_detail_job"></div>
             <div id="text_gender_detail_job">Giới tính</div>
             <div id="value_gender_detail_job">Không yêu cầu</div>
-            <img src="/css/style/image/ic_gender.svg" alt="ic_gender" id="ic_gender_detail_job" />
+            <img src="/css/style/image/ic_gender.svg" alt="ic_gender" id="ic_gender_detail_job">
             <div class="circle_icon" id="circle_icon_experience_detail_job"></div>
             <div id="text_experience_detail_job">Kinh nghiệm</div>
             <div id="value_experience_detail_job">1 năm</div>
-            <img src="/css/style/image/ic_experience.svg" alt="ic_experience" id="ic_experience_detail_job" />
+            <img src="/css/style/image/ic_experience.svg" alt="ic_experience" id="ic_experience_detail_job">
 
             <div id="text_adress_work_detail_job">Địa điểm làm việc</div>
-            <div id="value_adress_work_detail_job">KTX khu A, phường Linh Trung,Thành phố Thủ Đức, Thành phố Hồ Chí Minh
+            <div id="value_adress_work_detail_job">KTX khu A, phường Linh Trung,Thành phố Thủ Đức, Thành phố
+                Hồ Chí Minh
             </div>
         </div>
         <div id="rectangle_share_recruit_detail_job">
             <div id="text_share_recuit_detail_job">Chia sẻ tin tuyển dụng</div>
             <div id="text_copy_link_detail_job">Sao chép đường dẫn</div>
             <input type="text" value="file:///D:/Nhap%20mon%20CNPM/DO%20AN/detail_job_candidate.html" disabled
-                name="link_detail_job" id="link_detail_job" />
+                name="link_detail_job" id="link_detail_job">
 
             <div id="circle_copy_link_detail_job">
-                <img src="/css/style/image/ic_copy.svg" alt="ic_copy" id="ic_copy_link_detail_job" />
+                <img src="/css/style/image/ic_copy.svg" alt="ic_copy" id="ic_copy_link_detail_job">
             </div>
         </div>
+
 
         <div id="text_describe_job_detail_job">Mô tả công việc</div>
         <pre id="value_describe_job_detail_job">
@@ -88,5 +89,7 @@
                     - Cơ hội học hỏi những công nghệ khác
                     - Được tham gia các hoạt động, chương trình, dự án, sự kiện của công ty 
                 </pre>
+
     </div>
+
 </div>
