--- a/src/server_admin/Source/views/content_admin/list_news.hbs
+++ b/src/server_admin/Source/views/content_admin/list_news.hbs
@@ -1,87 +1,81 @@
-<div id="content_news_home_recruit">
-    <div id="text_recruitment_efficiency">Tổng số tin đã đăng: 5</div>
+<div id="content_home_admin">
+    <div id="text_recruitment_efficiency">Số lượng tin tuyển dụng: 5</div>
     <table id="table_mamage_recruit" style="width: 1333px;" rules="rows">
         <tr class="title_table_recruit">
-            <th>Mã tin</th>
+            <th>STT</th>
             <th>Tên tin tuyển dụng</th>
-            <th>Ngày tạo tin</th>
-            <th>Hạn nộp nồ sơ</th>
+            <th>Nhà tuyển dụng</th>
+            <th>Ngày tạo</th>
             <th>Lượt nộp</th>
-            <th>Số báo cáo</th>
-            <th>Trạng thái tin</th>
+            <th>Lượt báo cáo</th>
         </tr>
-        <tr>
-            <td>20120433</td>
+        <tr onclick="window.location.href='http://localhost:3032/admin/manage_news/detail_news'">
+            <td>1</td>
             <td>Front-End Web developer</td>
-            <td>31/11/2022</td>
-            <td>31/11/2022</td>
+            <td>VNG Games</td>
+            <td>31/12/2022</td>
             <td>10</td>
             <td>10</td>
-            <td>Đã duyệt</td>
         </tr>
-        <tr>
-            <td>20120433</td>
+        <tr onclick="window.location.href='http://localhost:3032/admin/manage_news/detail_news'">
+            <td>1</td>
             <td>Front-End Web developer</td>
-            <td>31/11/2022</td>
-            <td>31/11/2022</td>
+            <td>VNG Games</td>
+            <td>31/12/2022</td>
             <td>10</td>
             <td>10</td>
-            <td>Đã duyệt</td>
         </tr>
-        <tr>
-            <td>20120433</td>
+        <tr onclick="window.location.href='http://localhost:3032/admin/manage_news/detail_news'">
+            <td>1</td>
             <td>Front-End Web developer</td>
-            <td>31/11/2022</td>
-            <td>31/11/2022</td>
+            <td>VNG Games</td>
+            <td>31/12/2022</td>
             <td>10</td>
             <td>10</td>
-            <td>Đã duyệt</td>
         </tr>
-        <tr>
-            <td>20120433</td>
+        <tr onclick="window.location.href='http://localhost:3032/admin/manage_news/detail_news'">
+            <td>1</td>
             <td>Front-End Web developer</td>
-            <td>31/11/2022</td>
-            <td>31/11/2022</td>
+            <td>VNG Games</td>
+            <td>31/12/2022</td>
             <td>10</td>
             <td>10</td>
-            <td>Đã duyệt</td>
         </tr>
-        <tr>
-            <td>20120433</td>
+        <tr onclick="window.location.href='http://localhost:3032/admin/manage_news/detail_news'">
+            <td>1</td>
             <td>Front-End Web developer</td>
-            <td>31/11/2022</td>
-            <td>31/11/2022</td>
+            <td>VNG Games</td>
+            <td>31/12/2022</td>
             <td>10</td>
             <td>10</td>
-            <td>Đã duyệt</td>
         </tr>
-        <tr>
-            <td>20120433</td>
+        <tr onclick="window.location.href='http://localhost:3032/admin/manage_news/detail_news'">
+            <td>1</td>
             <td>Front-End Web developer</td>
-            <td>31/11/2022</td>
-            <td>31/11/2022</td>
+            <td>VNG Games</td>
+            <td>31/12/2022</td>
             <td>10</td>
             <td>10</td>
-            <td>Đã duyệt</td>
         </tr>
-        <tr>
-            <td>20120433</td>
+        <tr onclick="window.location.href='http://localhost:3032/admin/manage_news/detail_news'">
+            <td>1</td>
             <td>Front-End Web developer</td>
-            <td>31/11/2022</td>
-            <td>31/11/2022</td>
+            <td>VNG Games</td>
+            <td>31/12/2022</td>
             <td>10</td>
             <td>10</td>
-            <td>Đã duyệt</td>
         </tr>
-        <tr>
-            <td>20120433</td>
+        <tr onclick="window.location.href='http://localhost:3032/admin/manage_news/detail_news'">
+            <td>1</td>
             <td>Front-End Web developer</td>
-            <td>31/11/2022</td>
-            <td>31/11/2022</td>
+            <td>VNG Games</td>
+            <td>31/12/2022</td>
             <td>10</td>
             <td>10</td>
-            <td>Đã duyệt</td>
         </tr>
+
+
+
     </table>
     <nav aria-label="Page navigation example" id="nav_page_home_manage_recruit">
         <ul class="pagination">
