--- a/src/server_admin/Source/views/content_admin/sign_in.hbs
+++ b/src/server_admin/Source/views/content_admin/sign_in.hbs
@@ -12,19 +12,8 @@
             <img src="/css/style/image/logo_password.svg" id="logo_password" alt="logo_password">
             <img src="/css/style/image/eye-slash.svg" id="eye_slash_password" alt="eye_slash_password">
             <button type="submit" id="submit_form_login">Đăng nhập</button>
-            <div id="or">Hoặc</div>
         </form>
-
-        <button type="submit" id="submit_login_facebook"></button>
-        <img src="/css/style/image/ic_facebook.svg" id="ic_facebook" alt="ic_facebook">
-
-        <button type="submit" id="submit_login_google"></button>
-        <img src="/css/style/image/ic_google.svg" id="ic_google" alt="ic_google">
-
-        <div id="text_No_Account">Bạn chưa có tài khoản?
-            <a id="signin_now" href="/employer/sign_up">Đăng ký ngay</a>
-        </div>
-        <a href="/employer/forgot_pw" id="forget_password">Quên mật khẩu</a>
+        <a href="/admin/forgot_pw" id="forget_password_admin">Quên mật khẩu?</a>
     </div>
     <div id="rectangle_image_login">
         <img src="/css/style/image/side_login.svg" id="side_login" alt="login">
