--- a/src/server_admin/Source/views/layouts/main_admin_not_login.hbs
+++ b/src/server_admin/Source/views/layouts/main_admin_not_login.hbs
@@ -25,7 +25,7 @@
 
 <body>
     <div class="rectangle_home">
-        {{> header_employer_not_login}}
+        {{> header_admin_not_login}}
 
         {{{body}}}
 
