--- a/src/server_admin/Source/views/partials/menu.hbs
+++ b/src/server_admin/Source/views/partials/menu.hbs
@@ -1,14 +1,13 @@
-<div class="side_left_home_recruit">
-    <a id="menu_news_home_recruit" href="/employer">Bảng tin
-        <img src="/css/style/image/ic_news.svg" id="ic_news_home_recruit" alt="ic_news_home_recruit">
+<div class="side_left_home_admin">
+    <a id="menu_manage_account_user_admin" href="/admin/manage_account">Quản lý tài khoản người dùng
+        <img src="/css/style/image/ic_management_record.svg" id="ic_news_home_recruit" alt="ic_news_home_recruit">
     </a>
-    <a id="menu_manage_recruit_home_recruit" href="/employer/manage_recruitments">Quản lý tin tuyển dụng
+    <a id="menu_manage_news_home_admin" href="/admin/manage_news">Quản lý tin tuyển dụng
         <img src="/css/style/image/ic_management_recruit.svg" id="ic_manage_recruit_home_recruit"
             alt="ic_manage_recruit_home_recruit">
     </a>
-    <a id="menu_manage_record_home_recruit" href="#">Quản lý hồ sơ ứng viên
-        <img src="/css/style/image/ic_management_record.svg" id="ic_manage_record_home_recruit"
-            alt="ic_manage_record_home_recruit">
+    <a id="menu_manage_report_home_admin" href="#">Quản lý báo cáo tin tuyển dụng
+        <img src="/css/style/image/ic_report.svg" id="ic_manage_record_home_recruit" alt="ic_manage_record_home_recruit">
     </a>
     <div id="line"></div>
     <div id="text_version">©️2022 JORE. All rights reversed.</div>
