update login candidate

--- a/src/server_candidate/Source/views/candidate/content_reset_password.hbs
+++ b/src/server_candidate/Source/views/candidate/content_reset_password.hbs
@@ -3,12 +3,12 @@
                 <div id="text_reset_password">Đặt lại mật khẩu của bạn</div>
                 <form action="">
                     <div id="label_new_password">Mật khẩu mới</div>
-                    <input type="text" name="new_password" id="new_password"  required placeholder="Nhập mật khẩu mới">
+                    <input type="password" name="new_password" id="new_password"  required placeholder="Nhập mật khẩu mới">
                     <img src="/css/style/image/logo_password.svg" id="logo_password_reset_password_1" alt="logo_password_reset_password">
                     <img src="/css/style/image/eye-slash.svg" id="eye_slash_new_password_1" alt="eye_slash_new_password_1">
 
                     <div id="label_confirm_new_password">Xác nhận mật khẩu</div>
-                    <input type="text" name="confirm_new_password" id="confirm_new_password"  required placeholder="Nhập lại mật khẩu">
+                    <input type="password" name="confirm_new_password" id="confirm_new_password"  required placeholder="Nhập lại mật khẩu">
                     <img src="/css/style/image/logo_password.svg" id="logo_password_reset_password_2" alt="logo_password_reset_password">
                     <img src="/css/style/image/eye-slash.svg" id="eye_slash_new_password_2" alt="eye_slash_new_password_2">
 
