--- a/src/server_employer/Source/views/contents/homepage.hbs
+++ b/src/server_employer/Source/views/contents/homepage.hbs
@@ -1,18 +1,24 @@
-<div id="content_news_home_recruit">
-    <div id="text_recruitment_efficiency">Hiệu quả tuyển dụng</div>
-    <div id="rectangle_news_posted">
-        <div id="quantity_news_posted">0</div>
-        <div id="text_news_posted">Các tin đã đăng</div>
-        <img src="/css/style/image/ic_megaphone.svg" id="ic_megaphone_home_recruit" alt="ic_megaphone_home_recruit">
-    </div>
-    <div id="rectangle_candidate_received">
-        <div id="quantity_candidate_received">10</div>
-        <div id="text_candidate_received">Các ứng viên đã tiếp nhận</div>
-        <img src="/css/style/image/ic_candidate_recieve.svg" id="ic_receive_home_recruit" alt="ic_receive_home_recruit">
-    </div>
-    <div id="rectangle_candidate_new">
-        <div id="quantity_candidate_new">10</div>
-        <div id="text_candidate_new">Các ứng viên đã tiếp nhận</div>
-        <img src="/css/style/image/ic_candidate_new.svg" id="ic_new_home_recruit" alt="ic_new_home_recruit">
+<div class="rectangle_mid_news_home_recruit">
+    {{> menu}}
+
+    <div id="content_news_home_recruit">
+        <div id="text_recruitment_efficiency">Hiệu quả tuyển dụng</div>
+        <div id="rectangle_news_posted">
+            <div id="quantity_news_posted">{{{number_of_recruitments}}}</div>
+            <div id="text_news_posted">Các tin đã đăng</div>
+            <img src="/css/style/image/ic_megaphone.svg" id="ic_megaphone_home_recruit"
+                alt="ic_megaphone_home_recruit" />
+        </div>
+        <div id="rectangle_candidate_received">
+            <div id="quantity_candidate_received">{{{number_of_approved_candidates}}}</div>
+            <div id="text_candidate_received">Các ứng viên đã tiếp nhận</div>
+            <img src="/css/style/image/ic_candidate_recieve.svg" id="ic_receive_home_recruit"
+                alt="ic_receive_home_recruit" />
+        </div>
+        <div id="rectangle_candidate_new">
+            <div id="quantity_candidate_new">{{{number_of_new_candidates}}}</div>
+            <div id="text_candidate_new">Các ứng viên chờ duyệt</div>
+            <img src="/css/style/image/ic_candidate_new.svg" id="ic_new_home_recruit" alt="ic_new_home_recruit" />
+        </div>
     </div>
 </div>
