--- a/src/server_employer/Source/views/contents/manage_candidates_cvs.hbs
+++ b/src/server_employer/Source/views/contents/manage_candidates_cvs.hbs
@@ -1,3 +1,109 @@
-<div id="content_edit_news_home_recruit">
-    <div id="text_edit_news">Quản lý hồ sơ ứng viên</div>
+<div class="rectangle_mid_news_home_recruit">
+    {{> menu}}
+
+    <div id="content_news_home_recruit">
+        <div id="text_recruitment_efficiency">Số hồ sơ đã nộp: 5</div>
+        <table id="table_mamage_recruit" style="width: 1333px" rules="rows">
+            <tr class="title_table_recruit">
+                <th>ID</th>
+                <th>Họ và tên</th>
+                <th>Giới tính</th>
+                <th>Ngày sinh</th>
+                <th>Địa chỉ</th>
+                <th>Ngày nộp</th>
+                <th>Trạng thái hồ sơ</th>
+            </tr>
+            <tr>
+                <td>20120433</td>
+                <td>Hồ Duy Bảo</td>
+                <td>Nam</td>
+                <td>31/11/2022</td>
+                <td>Hồ Chí Minh</td>
+                <td>31/12/2022</td>
+                <td>Đã duyệt</td>
+            </tr>
+            <tr>
+                <td>20120433</td>
+                <td>Hồ Duy Bảo</td>
+                <td>Nam</td>
+                <td>31/11/2022</td>
+                <td>Hồ Chí Minh</td>
+                <td>31/12/2022</td>
+                <td>Đã duyệt</td>
+            </tr>
+            <tr>
+                <td>20120433</td>
+                <td>Hồ Duy Bảo</td>
+                <td>Nam</td>
+                <td>31/11/2022</td>
+                <td>Hồ Chí Minh</td>
+                <td>31/12/2022</td>
+                <td>Đã duyệt</td>
+            </tr>
+            <tr>
+                <td>20120433</td>
+                <td>Hồ Duy Bảo</td>
+                <td>Nam</td>
+                <td>31/11/2022</td>
+                <td>Hồ Chí Minh</td>
+                <td>31/12/2022</td>
+                <td>Đã duyệt</td>
+            </tr>
+            <tr>
+                <td>20120433</td>
+                <td>Hồ Duy Bảo</td>
+                <td>Nam</td>
+                <td>31/11/2022</td>
+                <td>Hồ Chí Minh</td>
+                <td>31/12/2022</td>
+                <td>Đã duyệt</td>
+            </tr>
+            <tr>
+                <td>20120433</td>
+                <td>Hồ Duy Bảo</td>
+                <td>Nam</td>
+                <td>31/11/2022</td>
+                <td>Hồ Chí Minh</td>
+                <td>31/12/2022</td>
+                <td>Đã duyệt</td>
+            </tr>
+            <tr>
+                <td>20120433</td>
+                <td>Hồ Duy Bảo</td>
+                <td>Nam</td>
+                <td>31/11/2022</td>
+                <td>Hồ Chí Minh</td>
+                <td>31/12/2022</td>
+                <td>Đã duyệt</td>
+            </tr>
+            <tr>
+                <td>20120433</td>
+                <td>Hồ Duy Bảo</td>
+                <td>Nam</td>
+                <td>31/11/2022</td>
+                <td>Hồ Chí Minh</td>
+                <td>31/12/2022</td>
+                <td>Đã duyệt</td>
+            </tr>
+        </table>
+        <nav aria-label="Page navigation example" id="nav_page_home_manage_recruit">
+            <ul class="pagination">
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </div>
