--- a/src/server_employer/Source/views/contents/manage_recruitments.hbs
+++ b/src/server_employer/Source/views/contents/manage_recruitments.hbs
@@ -1,106 +1,109 @@
-<div id="content_news_home_recruit">
-    <div id="text_recruitment_efficiency">Tổng số tin đã đăng: 5</div>
-    <table id="table_mamage_recruit" style="width: 1333px;" rules="rows">
-        <tr class="title_table_recruit">
-            <th>Mã tin</th>
-            <th>Tên tin tuyển dụng</th>
-            <th>Ngày tạo tin</th>
-            <th>Hạn nộp nồ sơ</th>
-            <th>Lượt nộp</th>
-            <th>Số báo cáo</th>
-            <th>Trạng thái tin</th>
-        </tr>
-        <tr>
-            <td>20120433</td>
-            <td>Front-End Web developer</td>
-            <td>31/11/2022</td>
-            <td>31/11/2022</td>
-            <td>10</td>
-            <td>10</td>
-            <td>Đã duyệt</td>
-        </tr>
-        <tr>
-            <td>20120433</td>
-            <td>Front-End Web developer</td>
-            <td>31/11/2022</td>
-            <td>31/11/2022</td>
-            <td>10</td>
-            <td>10</td>
-            <td>Đã duyệt</td>
-        </tr>
-        <tr>
-            <td>20120433</td>
-            <td>Front-End Web developer</td>
-            <td>31/11/2022</td>
-            <td>31/11/2022</td>
-            <td>10</td>
-            <td>10</td>
-            <td>Đã duyệt</td>
-        </tr>
-        <tr>
-            <td>20120433</td>
-            <td>Front-End Web developer</td>
-            <td>31/11/2022</td>
-            <td>31/11/2022</td>
-            <td>10</td>
-            <td>10</td>
-            <td>Đã duyệt</td>
-        </tr>
-        <tr>
-            <td>20120433</td>
-            <td>Front-End Web developer</td>
-            <td>31/11/2022</td>
-            <td>31/11/2022</td>
-            <td>10</td>
-            <td>10</td>
-            <td>Đã duyệt</td>
-        </tr>
-        <tr>
-            <td>20120433</td>
-            <td>Front-End Web developer</td>
-            <td>31/11/2022</td>
-            <td>31/11/2022</td>
-            <td>10</td>
-            <td>10</td>
-            <td>Đã duyệt</td>
-        </tr>
-        <tr>
-            <td>20120433</td>
-            <td>Front-End Web developer</td>
-            <td>31/11/2022</td>
-            <td>31/11/2022</td>
-            <td>10</td>
-            <td>10</td>
-            <td>Đã duyệt</td>
-        </tr>
-        <tr>
-            <td>20120433</td>
-            <td>Front-End Web developer</td>
-            <td>31/11/2022</td>
-            <td>31/11/2022</td>
-            <td>10</td>
-            <td>10</td>
-            <td>Đã duyệt</td>
-        </tr>
-    </table>
-    <nav aria-label="Page navigation example" id="nav_page_home_manage_recruit">
-        <ul class="pagination">
-            <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                    <span class="sr-only">Previous</span>
-                </a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
+<div class="rectangle_mid_news_home_recruit">
+    {{> menu}}
 
+    <div id="content_news_home_recruit">
+        <div id="text_recruitment_efficiency">Tổng số tin đã đăng: 5</div>
+        <table id="table_mamage_recruit" style="width: 1333px" rules="rows">
+            <tr class="title_table_recruit">
+                <th>Mã tin</th>
+                <th>Tên tin tuyển dụng</th>
+                <th>Ngày tạo tin</th>
+                <th>Hạn nộp nồ sơ</th>
+                <th>Lượt nộp</th>
+                <th>Số báo cáo</th>
+                <th>Trạng thái tin</th>
+            </tr>
+            <tr>
+                <td>20120433</td>
+                <td>Front-End Web developer</td>
+                <td>31/11/2022</td>
+                <td>31/11/2022</td>
+                <td>10</td>
+                <td>10</td>
+                <td>Đã duyệt</td>
+            </tr>
+            <tr>
+                <td>20120433</td>
+                <td>Front-End Web developer</td>
+                <td>31/11/2022</td>
+                <td>31/11/2022</td>
+                <td>10</td>
+                <td>10</td>
+                <td>Đã duyệt</td>
+            </tr>
+            <tr>
+                <td>20120433</td>
+                <td>Front-End Web developer</td>
+                <td>31/11/2022</td>
+                <td>31/11/2022</td>
+                <td>10</td>
+                <td>10</td>
+                <td>Đã duyệt</td>
+            </tr>
+            <tr>
+                <td>20120433</td>
+                <td>Front-End Web developer</td>
+                <td>31/11/2022</td>
+                <td>31/11/2022</td>
+                <td>10</td>
+                <td>10</td>
+                <td>Đã duyệt</td>
+            </tr>
+            <tr>
+                <td>20120433</td>
+                <td>Front-End Web developer</td>
+                <td>31/11/2022</td>
+                <td>31/11/2022</td>
+                <td>10</td>
+                <td>10</td>
+                <td>Đã duyệt</td>
+            </tr>
+            <tr>
+                <td>20120433</td>
+                <td>Front-End Web developer</td>
+                <td>31/11/2022</td>
+                <td>31/11/2022</td>
+                <td>10</td>
+                <td>10</td>
+                <td>Đã duyệt</td>
+            </tr>
+            <tr>
+                <td>20120433</td>
+                <td>Front-End Web developer</td>
+                <td>31/11/2022</td>
+                <td>31/11/2022</td>
+                <td>10</td>
+                <td>10</td>
+                <td>Đã duyệt</td>
+            </tr>
+            <tr>
+                <td>20120433</td>
+                <td>Front-End Web developer</td>
+                <td>31/11/2022</td>
+                <td>31/11/2022</td>
+                <td>10</td>
+                <td>10</td>
+                <td>Đã duyệt</td>
+            </tr>
+        </table>
+        <nav aria-label="Page navigation example" id="nav_page_home_manage_recruit">
+            <ul class="pagination">
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </div>
