--- a/src/server_employer/Source/views/partials/header_employer_login.hbs
+++ b/src/server_employer/Source/views/partials/header_employer_login.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light header">
-    <img id="logo_web_home_recruit" src="/css/style/image/logo_web.svg" alt="logoweb">
+    <a href="/employer/homepage"><img id="logo_web_home_recruit" src="/css/style/image/logo_web.svg" alt="logoweb"></a>
     <a id="post_news_recruit" href="/employer/edit_recruitment">Đăng tin
         <img src="/css/style/image/ic_post_news.svg" id="ic_post_news_home_recruit" alt="ic_post_news_home_recruit">
     </a>
@@ -10,8 +10,8 @@
         <img src="/css/style/image/ic_notify_white.svg" id="ic_notify_recruit" alt="ic_notify_candidate">
     </div>
     <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="menu_account_recruit"
-            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dương Minh Hiếu
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="menu_account_recruit" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">Dương Minh Hiếu
             <img src="/css/style/image/avatar_candidate.svg" id="avatar_recruit" alt="avatar_recruit">
         </button>
         <div class="dropdown-menu" id="dropdown_menu_recruit" aria-labelledby="menu_account_recruit">
@@ -24,9 +24,9 @@
                 <img src="/css/style/image/ic_managed_application.svg" id="ic_application_management_candidate"
                     alt="ic_application_management_candidate">
             </a>
-               <a class="dropdown-item" id="logout_recruit" href="#">Đăng xuất
-                        <img src="/css/style/image/ic_logout.svg" id="ic_logout_candidate" alt="ic_logout_candidate">
-              </a>
+            <a class="dropdown-item" id="logout_recruit" href="#">Đăng xuất
+                <img src="/css/style/image/ic_logout.svg" id="ic_logout_candidate" alt="ic_logout_candidate">
+            </a>
 
         </div>
     </div>
