--- a/src/server_employer/Source/views/partials/header_employer_not_login.hbs
+++ b/src/server_employer/Source/views/partials/header_employer_not_login.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light header">
-    <img id="logo_web" src="/css/style/image/logo_web.svg" alt="logoweb">
+    <a href="/employer/homepage"><img id="logo_web" src="/css/style/image/logo_web.svg" alt="logoweb"></a>
     <a href="#" id="find_job">Tìm việc làm</a>
     <a href="#" id="list_company">Danh sách công ty</a>
     <a href="#" id="blog">Blog</a>
