--- a/src/server_employer/Source/views/partials/menu.hbs
+++ b/src/server_employer/Source/views/partials/menu.hbs
@@ -6,7 +6,7 @@
         <img src="/css/style/image/ic_management_recruit.svg" id="ic_manage_recruit_home_recruit"
             alt="ic_manage_recruit_home_recruit">
     </a>
-    <a id="menu_manage_record_home_recruit" href="#">Quản lý hồ sơ ứng viên
+    <a id="menu_manage_record_home_recruit" href="/employer/manage_candidates_cvs">Quản lý hồ sơ ứng viên
         <img src="/css/style/image/ic_management_record.svg" id="ic_manage_record_home_recruit"
             alt="ic_manage_record_home_recruit">
     </a>
