--- a/src/server_admin/Source/views/partials/header_admin_login.hbs
+++ b/src/server_admin/Source/views/partials/header_admin_login.hbs
@@ -14,9 +14,12 @@
                 <img src="/css/style/image/ic_setting_account.svg" id="ic_setting_account_candidate"
                     alt="ic_setting_account_candidate">
             </a>
-               <a class="dropdown-item" id="logout_recruit" href="#">Đăng xuất
+            <form action="/auth/sign_out" method="post">
+               <button class="dropdown-item" id="logout_recruit" type="submit">Đăng xuất
                         <img src="/css/style/image/ic_logout.svg" id="ic_logout_candidate" alt="ic_logout_candidate">
-              </a>
+              </button>
+            
+            </form>
 
         </div>
     </div>
