--- a/src/server_employer/Source/views/contents/sign_in.hbs
+++ b/src/server_employer/Source/views/contents/sign_in.hbs
@@ -34,7 +34,7 @@
         <img src="/css/style/image/ic_google.svg" id="ic_google" alt="ic_google">
 
         <div id="text_No_Account">Bạn chưa có tài khoản?
-            <a id="signin_now" href="/employer/sign_up">Đăng ký ngay</a>
+            <a id="signin_now" href="/auth/sign_up">Đăng ký ngay</a>
         </div>
         <a href="/employer/forgot_pw" id="forget_password">Quên mật khẩu</a>
     </div>
